# clockon_cli

./: Cargo.toml  build.sh
.cargo/: config
examples/: break_off.xml  break_on.html  break_on.xml  clock_off.xml  clock_on.xml  clockoff.html  clockon.html
src/: id.rs  main.rs
test_files/: clocked_off.html  clocked_on.html  on_break.html
